:bug: Fixed font styling for better contrast

--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -29,7 +29,7 @@ h1 {
     font-size: 42px;
     font-weight: bold;
     letter-spacing: -2px;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid rgb(90, 90, 90);
 }
 
 h2 {
@@ -45,7 +45,7 @@ h2 span {
     font-style: italic;
     font-family: Georgia, Serif;
     font-size: 16px;
-    color: #999;
+    color: rgb(90, 90, 90);
     font-weight: normal;
 }
 
@@ -54,9 +54,12 @@ p {
 }
 
 a {
-    color: #999;
+    /* color: #999;
     text-decoration: none;
-    border-bottom: 1px dotted #999;
+    border-bottom: 1px dotted #999; */
+    color: rgb(90, 90, 90);
+    text-decoration: none;
+    border-bottom: 1px dotted rgb(90, 90, 90);
 }
 
 a:hover {
@@ -100,4 +103,15 @@ dd.clear {
     float: none;
     margin: 0;
     height: 15px;
+}
+
+ul {
+    display: block;
+    list-style-type: square;
+    margin-top: 1em;
+    margin-bottom: 1 em;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 40px;
+    color: #000000
 }
